Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -17,18 +17,23 @@
   <link rel="icon" href="logo.png" />
 
   <!-- Open Graph / Social Sharing -->
+  <link rel="canonical" href="https://pkl.kelastkj.online/" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="id_ID" />
+  <meta property="og:site_name" content="SI PKL &amp; UKK Industri" />
+  <meta property="og:url" content="https://pkl.kelastkj.online/" />
   <meta property="og:title" content="Sistem Informasi PKL &amp; UKK Industri — TKJ SMKN 1 Telagasari" />
   <meta property="og:description" content="Sistem Informasi PKL &amp; UKK Industri — informasi pembimbing laporan, penguji laporan, peserta PKL, dan kompetensi UKK Industri di TKJ SMKN 1 Telagasari." />
-  <meta property="og:image" content="logo.png" />
-  <meta property="og:image:alt" content="Logo TKJ SMKN 1 Telagasari" />
+  <meta property="og:image" content="https://pkl.kelastkj.online/default-og-image.png" />
+  <meta property="og:image:secure_url" content="https://pkl.kelastkj.online/default-og-image.png" />
+  <meta property="og:image:alt" content="Gambar pratinjau situs SI PKL &amp; UKK Industri" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Sistem Informasi PKL &amp; UKK Industri — TKJ SMKN 1 Telagasari" />
   <meta name="twitter:description" content="Sistem Informasi PKL &amp; UKK Industri — informasi pembimbing laporan, penguji laporan, peserta PKL, dan kompetensi UKK Industri di TKJ SMKN 1 Telagasari." />
-  <meta name="twitter:image" content="logo.png" />
+  <meta name="twitter:image" content="https://pkl.kelastkj.online/default-og-image.png" />
+  <meta name="twitter:image:alt" content="Gambar pratinjau situs SI PKL &amp; UKK Industri" />
 
   <link rel="preconnect" href="https://cdn.tailwindcss.com" crossorigin />
   <link rel="preconnect" href="https://unpkg.com" crossorigin />
