--- a/bimbingan.html
+++ b/bimbingan.html
@@ -64,6 +64,7 @@
           <ul class="hidden md:flex items-center gap-1 text-sm">
             <li><a href="dashboard.html" class="px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="layout-dashboard" class="w-4 h-4"></i>Dashboard</a></li>
             <li><a href="bimbingan.html" class="px-3 py-2 rounded-lg bg-emerald-600 text-white flex items-center gap-2"><i data-lucide="users" class="w-4 h-4"></i>Bimbingan</a></li>
+            <li><a href="monitoring-guru.html" class="px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="monitor" class="w-4 h-4"></i>Monitoring</a></li>
             <li><a href="pengujian.html" class="px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="clipboard-check" class="w-4 h-4"></i>Pengujian</a></li>
             <li><a href="sertifikat.html" class="px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="award" class="w-4 h-4"></i>Sertifikat</a></li>
           </ul>
@@ -105,6 +106,7 @@
       <ul class="flex flex-col gap-1 text-sm">
         <li><a href="dashboard.html" class="block px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="layout-dashboard" class="w-5 h-5"></i>Dashboard</a></li>
         <li><a href="bimbingan.html" class="block px-3 py-2 rounded-lg bg-emerald-600 text-white flex items-center gap-2"><i data-lucide="users" class="w-5 h-5"></i>Bimbingan</a></li>
+        <li><a href="monitoring-guru.html" class="block px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="monitor" class="w-5 h-5"></i>Monitoring</a></li>
         <li><a href="pengujian.html" class="block px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="clipboard-check" class="w-5 h-5"></i>Pengujian</a></li>
         <li><a href="sertifikat.html" class="block px-3 py-2 rounded-lg hover:bg-slate-100 flex items-center gap-2"><i data-lucide="award" class="w-5 h-5"></i>Sertifikat</a></li>
       </ul>
